# myTeamsParser

./: .gitignore  CMakeLists.txt  Makefile  README.md  linked_list.c  linked_list.h  load_clients.c  load_users.c  split_string.c  user.h
includes/: linked_list.h  loader.h  user.h  writer.h  writer.h.gch
savefiles/: Teams_Users.txt  cache_channels.txt  cache_privatemessages.txt  cache_teams.txt  channels.cache  privatemessages.cache  teams.cache  threads.cache  users.cache
src/: linked_list.c
src/lists/: channel_list.c  find_by_name.c  find_by_uuid.c  find_private_message.c  linked_list.c  list_len.c  remove.c  team_list.c  thread_list.c  users_list.c
src/loader/: Makefile  check_file.c  file.c  linked_list.c  load_channel.c  load_privatemessages.c  load_teams.c  load_threads.c  load_users.c  main.c  open_file.c  split_string.c
src/writer/: Makefile  add_new.c  add_thread_channel_to_upper.c  add_thread_reply.c  add_user.c  channel_subscribe.c  channel_unsubscribe.c  check_file.c  main.c  open_file.c  set_parent.c  split_string.c  splt_private_message_file.c  team_subscribe.c  team_unsubscribe.c
